@@ -11,4 +11,6 @@ BUGFIXES:
 001 ==> 450567 - When editing a group caption, the digiKam does not warn of possible information loss.
 002 ==> 450587 - Inconsistent disabled state of Save action after Undo/Redo.
 003 ==> 451256 - An empty album displays a notification message that the database query returned no result.
-004 ==> 
+004 ==> 451265 - Incorrect information in dialog.
+005 ==> 451221 - Cannot start digiKam.
+006 ==> 
